# rest_api_test

./: .gitignore  assertions.py  base_case.py  first_api_test.py  homeworks.py  json_parcing.py  main.py  pyproject.toml  simple_test.py  test.py  test_user_auth.py
lib/: assertions.py  base_case.py  logger.py  my_requests.py
tests/: homeworks.py  test_user_auth.py  test_user_edit.py  test_user_exists.py  test_user_register.py
