[tool.poetry]
name = "rest-api-test"
version = "0.1.0"
description = "testing of rest api"
authors = ["shutelmann <sozaev.azamat@outlook.com>"]
readme = "README.md"
packages = [{include = "rest_api_test"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
